# call-me-baby

./: Makefile  README.md  main.py  pyproject.toml
data/output/: function_calls.json
src/: __main__.py  decoder.py  schema.py
