[project]
name = "call-me-baby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "huggingface-hub>=1.20.1",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
